# Koi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  backlog.md  config.mk  grammar.txt  intro.md  intro.txt  koi.ai  math.koi  spec.txt  test.amp  tokens.txt
.github/workflows/: rust.yml
examples/: bool.koi  dict-fn-shorthand.koi  dict-methods.koi  import.koi  type-hints.koi
examples/module/: double.koi  fibonacci.koi  named.koi
koi/: Cargo.toml
koi-core/: Cargo.toml
koi-core/src/: lib.rs
koi-wasm/: Cargo.toml
koi-wasm/src/: lib.rs
koi-wasm/tests/: test.html
koi/src/: main.rs
src/: main.rs  scanner.rs
src/ast/: mod.rs
src/interp/: cmd.rs  env.rs  func.rs  method.rs  mod.rs  native.rs  stack.rs  test.rs  value.rs
src/interpreter/: mod.rs  test.rs
src/lexer/: mod.rs  peek.rs  raw.rs  record.rs  test.rs
src/parser/: cmd.rs  expr.rs  func.rs  mod.rs  stmt.rs  test.rs
src/scanner/: mod.rs  string.rs  test.rs  token.rs
src/token/: mod.rs
web/: .firebaserc  gulpfile.js  index.html  package.json  style.scss
web/snippets/: cmd_0.koi  cmd_1.koi  cmd_10.koi  cmd_11.koi  cmd_12.koi  cmd_13.koi  cmd_14.koi  cmd_15.koi  cmd_16.koi  cmd_17.koi  cmd_18.koi  cmd_19.koi  cmd_2.koi  cmd_3.koi  cmd_4.koi  cmd_5.koi  cmd_6.koi  cmd_7.koi  cmd_8.koi  cmd_9.koi  cmdline_0.koi  cmdline_1.koi  cmdline_2.koi  cmdline_3.koi  demo.koi  demo_0.koi  fn_0.koi  fn_1.koi  fn_2.koi  fn_3.koi  fn_4.koi  highlighter.py  ifsloops_0.koi  ifsloops_1.koi  ifsloops_2.koi  json_0.koi  primitive_0.koi  primitive_1.koi  primitive_2.koi  primitive_3.koi  (+24 more)
(+29 files in other folders)
