[package]
name = "koi"
version = "0.1.0"
authors = ["elia"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
os_pipe = "0.9.2"
either = "1.6.1"
dirs = "3.0.1"
regex = "1.4.5"
serde_json = "1.0.64"
clap = "2.33.3"
